--- a/styles/style.css
+++ b/styles/style.css
@@ -99,12 +99,12 @@ fieldset {
   outline: 1px solid #fff;
 }
 
-.search-form__label:hover {
+/* .search-form__label:hover {
   text-decoration: underline;
-}
+} */
 
-.search-form__textfield:hover {
-  text-decoration: none;
+.search-form__checkbox-list > .search-form__label:hover {
+  text-decoration: underline;
 }
 .search-form__label {
   width: fit-content;
