--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ html {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 h1,
@@ -54,7 +58,6 @@ ol {
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
   width: 1140px;
-  max-height: 534px;
 }
 
 fieldset {
@@ -90,13 +93,19 @@ fieldset {
   border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-  color: rgb(255, 255, 255, 0.7);
+  color: #fff;
   background-color: inherit;
   margin-top: 2.5px;
+  appearance: none;
+}
+
+.search-form__textfield:focus {
+  outline: none;
 }
 
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__checkbox-list > .search-form__label:hover {
@@ -108,6 +117,10 @@ fieldset {
   gap: 5px;
   align-content: center;
   cursor: pointer;
+}
+
+.search-form__label:focus {
+  outline: none;
 }
 
 .search-form__label-text {
@@ -135,10 +148,6 @@ fieldset {
   background-color: #fff;
   outline: 1px solid #fff;
   outline-offset: 1px;
-}
-
-.search-form__checkbox:has(:focus-visible) {
-  outline: 1px solid #fff;
 }
 
 .result {
@@ -171,6 +180,11 @@ fieldset {
   background-color: inherit;
   color: #fff;
   border: 1px solid #fff;
+  min-height: 34px;
+}
+
+.button:focus {
+  outline: none;
 }
 
 .button:hover {
@@ -183,19 +197,21 @@ fieldset {
 
 .search-form__submit-button {
   width: 194px;
-  height: 34px;
   margin-top: 20px;
+}
+
+.search-form__submit-button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .more-button {
   width: 100%;
-  height: 34px;
   margin: 1px;
 }
 
 .content__details {
   width: 399px;
-  height: 534px;
   display: flex;
   flex-direction: column;
   gap: 26px;
@@ -215,19 +231,10 @@ fieldset {
 }
 
 .content__list {
-  overflow: hidden scroll;
+  overflow: hidden auto;
   height: 298px;
   position: relative;
 }
-
-.content__video-card:active {
-  background-color: #545050;
-}
-
-/* .content__list-item {
-  margin-left: 1px;
-  margin-right: 1px;
-} */
 
 .content__list-item:not(:last-of-type) {
   margin-bottom: 30px;
@@ -239,8 +246,19 @@ fieldset {
   text-decoration: none;
   color: #fff;
   width: 394px;
-  height: 107px;
   align-content: center;
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
 }
 
 .content__card-link_current {
@@ -249,6 +267,7 @@ fieldset {
 
 .content__card-link:focus-visible {
   background-color: #545050;
+  outline: 1px solid #fff;
 }
 
 .content__video-card {
@@ -270,6 +289,7 @@ fieldset {
   width: 194px;
   height: 103px;
   margin: 2px;
+  object-fit: cover;
 }
 
 .content__video-card-description-container {
@@ -277,10 +297,6 @@ fieldset {
   margin-left: 2px;
   margin-top: 2px;
   margin-bottom: 4px;
-}
-
-.content__video-card-description-container:hover {
-  text-decoration: underline;
 }
 
 .content__video-card-description {
