--- a/styles/style.css
+++ b/styles/style.css
@@ -99,15 +99,6 @@ fieldset {
   appearance: none;
 }
 
-.search-form__textfield:focus {
-  outline: none;
-}
-
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid #fff;
-  outline-offset: 1px;
-}
-
 .search-form__checkbox-list > .search-form__label:hover {
   text-decoration: underline;
 }
@@ -119,8 +110,13 @@ fieldset {
   cursor: pointer;
 }
 
-.search-form__label:focus {
+.search-form__label:has(:focus) {
   outline: none;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .search-form__label-text {
@@ -187,6 +183,11 @@ fieldset {
   outline: none;
 }
 
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
 .button:hover {
   text-decoration: underline;
 }
@@ -200,14 +201,9 @@ fieldset {
   margin-top: 20px;
 }
 
-.search-form__submit-button:focus-visible {
-  outline: 1px solid #fff;
-  outline-offset: 1px;
-}
-
 .more-button {
   width: 100%;
-  margin: 1px;
+  margin: 2px;
 }
 
 .content__details {
