--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,10 @@ fieldset {
   appearance: none;
 }
 
+.search-form__textfield:focus {
+  outline: none;
+}
+
 .search-form__checkbox-list > .search-form__label:hover {
   text-decoration: underline;
 }
